# WhisperGate_Free-JUCE-Plugin

./: README.md
WhisperGate_JUCE_Scaffold_v6_src/: CMakeLists.txt  LICENSE_NOTE.txt  README.md  manifest.json
WhisperGate_JUCE_Scaffold_v6_src/Source/: CodexDrawerComponent.cpp  CodexDrawerComponent.h  CodexStateManager.cpp  CodexStateManager.h  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  RuneComboEngine.cpp  RuneComboEngine.h  RuneManager.cpp  RuneManager.h  SequenceArcComponent.cpp  SequenceArcComponent.h  SequenceEngine.cpp  SequenceEngine.h  SigilStateManager.cpp  SigilStateManager.h  UIEventRouter.cpp  UIEventRouter.h  UISfxEngine.cpp  UISfxEngine.h  VisualRenderer.cpp  VisualRenderer.h  WhisperEngine.cpp  WhisperEngine.h
WhisperGate_JUCE_Scaffold_v6_src/addons/agartha_template/: README.md
WhisperGate_JUCE_Scaffold_v6_src/docs/: FINALIZATION_ROADMAP.md  FINAL_HONEST_STATUS.md  HANDOFF_COMPLETE_CHECKLIST.md  HOST_VALIDATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  LOCAL_COMPILE_GATE.md  UI_SFX_MAP.md
WhisperGate_JUCE_Scaffold_v6_src/presets/: demo_sigil_states.json  demo_state.whispergate
